# autoware_radar_avoid_collision

./: CMakeLists.txt  README.md  package.xml
include/autoware/radar_avoid_collision/: node_utils.hpp  radar_avoid_collision.hpp  service_client.hpp
launch/: radar_avoid_collision.launch.xml
src/: radar_avoid_collision.cpp
